objects/Asset_Audit__c.object
<CustomObject>
    <description>Object for TK/Asset Audit.  Child of Asset standard object in Master-Detail relationship.</description>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Audits</relationshipLabel>
        <relationshipName>Asset_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag that the TK (Asset) Audit has been completed</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Asset__r.TR_Retention__Contract_End_Date__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Account__c</fullName>
        <formula>Asset__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Audited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who the asset was last audited by</description>
        <label>Last Audited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Audited_Date__c</fullName>
        <description>When the asset was last audited</description>
        <label>Last Audited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <description>The 3E go live date for the asset</description>
        <formula>Asset__r.LCRM_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Users_Exceeded_Usage__c</fullName>
        <description>The number of users who have exceeded their Monthly TK Definition over the last 12 months</description>
        <label>Number of Users Exceeded Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users_Licenses_Billable__c</fullName>
        <description>Refers to the number of licences that the customer has for the given product</description>
        <formula>Asset__r.LCRM_Elite_Billing_Timekeepers__c</formula>
        <label>Number of Users/Licenses (Billable)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users_Licenses_Non_Billable__c</fullName>
        <description>Refers to the number of additional licenses the customer has at no extra cost</description>
        <formula>Asset__r.LCRM_Elite_Non_Billing_Timekeepers__c</formula>
        <label>Number of Users/Licenses (Non-Billable)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>The product that the asset pertains to</description>
        <formula>Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>Active TKs is the current number of TimeKeepers as determined in the audit</description>
        <label>Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Users_Licenses_Total_Billable_and_Non__c</fullName>
        <description>Refers to the total number of licences: Billable + Non-Billable</description>
        <formula>Asset__r.LCRM_Elite_Total_Timekeepers__c</formula>
        <label>Users/Licenses Total (Billable and Non)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Audit</label>
    <nameField>
        <label>Asset Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>